--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Caderneta CCM</title>
+  <title>Teacher Notes Hub</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/icons8-livro-aberto-stickers-16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="assets/icons8-livro-aberto-stickers-32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/icons8-livro-aberto-stickers-96.png" sizes="96x96">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
